Use local archived resources for testing